--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -17,8 +17,9 @@
     height: 20%;
     width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items:flex-start;
     justify-content: space-between;
-    align-items: center;
 }
 
 .main__container {
@@ -27,13 +28,12 @@
 }
 
 .main-logo {
-    width: 50%;
     height: 50%;
 }
 
 .menu-bar__list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .menu-bar__list li {
@@ -46,12 +46,12 @@
 
 .logos__container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
 .logo {
-    width: 15%;
-    height: 15%;
+    width: 2em;
+    height: 2em;
 }
 
 .footer__container {
@@ -65,7 +65,7 @@
     background-color: #1b1c20;
 }
 
-.footer--text {
+.footer__text {
     color: white;
 }
 
