--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -18,7 +18,7 @@ html{
     font-family:'Oswald';
 }
 .page__container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     position: absolute;
     display: flex;
@@ -94,35 +94,60 @@ height: min-content;
     height: 80%;
     width: 100%;
 }
-.footer__container {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    bottom: 0px;
-    background-color: #1b1c20;
-}
+
 
 .footer__text {
     color: white;
     font-size: 0.7rem;
     font-family:'Oswald-Light', sans-serif;
 }
-.chess-board{
-    display: flex;
-    flex-direction: column;
-    border: 2px solid black;
-}
 
-.chess-board__cell{
-    width: 4em;
+
+.footer__container {
+    width: 100%;
     height: 4em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1b1c20;
+}
+.chess-board__frame{
+    display: flex;
+    justify-content: center;
+    margin: 1em 0em 2em 0em;
+}
+.chess-board {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    width: 40vw;
+    height: 40vw;
+    border: 1em solid #1b1c20;
+  }
+  
+  .chess-board__cell {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 12.5%;
+    width: 12.5%;
+    max-height: 100vw;
+    max-width: 100vw;
+    font-size: 4vw;
+  }
+  
+.black--cell{
+    background-color: #1b1c20;
+  }
+
+.black--cell{
+    background-color:#999999;
 }
 /* Mediaqueries breakpoints */
 
-@media (min-width: 481px) {}
+@media (min-width: 481px) {
+
+}
 
 @media (min-width: 1025px) {
     .header__container{
