--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -109,6 +109,7 @@ height: min-content;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: auto;
     background-color: #1b1c20;
 }
 .chess-board__frame{
@@ -123,6 +124,8 @@ height: min-content;
     width: 40vw;
     height: 40vw;
     border: 1em solid #1b1c20;
+ 
+
   }
   
   .chess-board__cell {
@@ -134,8 +137,35 @@ height: min-content;
     max-height: 100vw;
     max-width: 100vw;
     font-size: 4vw;
+
   }
   
+.chess-board__color--picker__input:checked + .chess-board{
+    -webkit-transform: rotateZ(360deg);
+    transform: rotateZ(360deg);
+    -webkit-transition: transform 1s ease-out;
+    transition: transform 1s ease-out;
+}
+.chess-board__color--picker__input:checked ~ .chess-board .chess-board__cell{
+    -webkit-transform: rotateX(360deg);
+    transform: rotateX(360deg);
+    -webkit-transition: transform 1s ease-out;
+    transition: transform 1s ease-out;
+}
+
+.chess-board__color--picker__input:not(:checked) + .chess-board{
+    -webkit-transition: transform 1s ease-out;
+    transition: transform 1s ease-out;
+    -webkit-transform: transform rotateZ(180deg);
+    transform: rotateZ(180deg);
+}
+.chess-board__color--picker__input:not(:checked) ~ .chess-board .chess-board__cell{
+    -webkit-transition: transform 1s ease-out;
+    transition: transform 1s ease-out;
+    -webkit-transform: transform rotateZ(180deg);
+    transform: rotateX(180deg);
+}
+
 .black--cell{
     background-color: #1b1c20;
   }
