--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -112,20 +112,17 @@ height: min-content;
     margin-top: auto;
     background-color: #1b1c20;
 }
-.chess-board__frame{
-    display: flex;
-    justify-content: center;
-    margin: 1em 0em 2em 0em;
+
+.chess-board__color--picker__label {
+    align-self: flex-start;
 }
+
 .chess-board {
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
-    width: 40vw;
-    height: 40vw;
+    width: 41vw;
+    height: 41vw;
     border: 1em solid #1b1c20;
- 
-
   }
   
   .chess-board__cell {
@@ -137,9 +134,9 @@ height: min-content;
     max-height: 100vw;
     max-width: 100vw;
     font-size: 4vw;
-
   }
   
+
 .chess-board__color--picker__input:checked + .chess-board{
     -webkit-transform: rotateZ(360deg);
     transform: rotateZ(360deg);
