--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -126,8 +126,8 @@ height: min-content;
     box-sizing: content-box;
     display: flex;
     flex-wrap: wrap;
-    width: 41vw;
-    height: 41vw;
+    width: 70vw;
+    height: 70vw;
     margin: 1em 0 1em 0;
     border: 1em solid #1b1c20;
   }
@@ -140,7 +140,7 @@ height: min-content;
     width: 12.5%;
     max-height: 100vw;
     max-width: 100vw;
-    font-size: 4vw;
+    font-size: 7vw;
   }
   
 
@@ -229,6 +229,25 @@ height: min-content;
     .social-media__logo:hover{
     transform: scale(1.25);
     }
+    .chess-board{
+    box-sizing: content-box;
+    display: flex;
+    flex-wrap: wrap;
+    width: 40vw;
+    height: 40vw;
+    margin: 0em 0 1em 0;
+    border: 1em solid #1b1c20;
+    }
+    .chess-board__cell {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        height: 12.5%;
+        width: 12.5%;
+        max-height: 100vw;
+        max-width: 100vw;
+        font-size: 4vw;
+      }
 }
 
 @media (min-width: 1440px) {}
