--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -6,17 +6,17 @@
 
 @font-face {
     font-family:'Oswald';
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-Bold.ttf);
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-ExtraLight.ttf);
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-Light.ttf);
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-Medium.ttf);
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-Regular.ttf);
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-SemiBold.ttf);
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-VariableFont_wght.ttf);
+    src: url(../home-page/assets/fonts/Oswald-Bold.ttf);
+    src: url(../home-page/assets/fonts/Oswald-ExtraLight.ttf);
+    src: url(../home-page/assets/fonts/Oswald-Light.ttf);
+    src: url(../home-page/assets/fonts/Oswald-Medium.ttf);
+    src: url(../home-page/assets/fonts/Oswald-Regular.ttf);
+    src: url(../home-page/assets/fonts/Oswald-SemiBold.ttf);
+    src: url(../home-page/assets/fonts/Oswald-VariableFont_wght.ttf);
 }
-html{
-    font-family:'Oswald';
-}
+body {
+    font-family: 'Oswald';
+  }
 .page__container {
     min-height: 100vh;
     width: 100%;
@@ -27,28 +27,18 @@ html{
 }
 
 .header__container {
-    height: 10%;
     width: 100%;
-    margin-top: 0.5em;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: space-between;
     background-color: #ffffff;
+    display: flex;
+    justify-content: space-between;
 }
 .toggle__input{
-font-size: 2rem;
-margin: 0em 1em 0em 0em;
-height: min-content;
+    font-size: 2rem;
+    margin: 0em 1em 0em 0em;
+    height: min-content;
 }
 .checkbox__button{
     display: none;
-}
-
-.header__logo__container{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
 }
 
 .main-logo {
@@ -58,7 +48,30 @@ height: min-content;
 .nav__container{
     width: 100%;
     display: none;
+    height: fit-content;
 }
+
+
+.checkbox__button:checked ~ .nav__container{
+    display: block;
+    animation-name:slide-right;
+    animation: slide-right .4s ease-out;
+    position:absolute;
+    background-color: #ffffff;
+    z-index: 100;
+    top: 12vh;
+}
+
+@keyframes slide-right {
+    0% {
+      opacity: 0;
+      transform: translateX(-15%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
 
 .menu-bar__list {
     display: flex;
@@ -67,6 +80,7 @@ height: min-content;
 
 .menu-bar__list li {
     list-style-type: none;
+    margin: 1.5em 0 1.5em 0;
 }
 
 .menu-bar__list li a {
@@ -80,7 +94,7 @@ height: min-content;
 .logos__container--social-media {
     display: flex;
     justify-content: flex-start;
-    margin-right: 1em;
+    margin: 1em 0em 1em 0.8em;
 }
 
 .social-media__logo {
@@ -91,7 +105,6 @@ height: min-content;
 }
 
 .main__container {
-    height: 80%;
     width: 100%;
 }
 
@@ -115,6 +128,7 @@ height: min-content;
 
 .chess-board__color--picker__label {
     align-self: flex-start;
+    margin-left: 1em;
 }
 
 .chess-board__container{
@@ -180,7 +194,10 @@ height: min-content;
 /* Mediaqueries breakpoints */
 
 @media (min-width: 481px) {
-
+    .chess-board{
+    width: 60vw;
+    height: 60vw;
+    }
 }
 
 @media (min-width: 1025px) {
@@ -189,17 +206,12 @@ height: min-content;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        margin-top: 0.5em;
     }
-    .header__logo__container{
-        width: 15%;
-    }
-
     .nav__container{
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        width: 57%;
+        justify-content: center;
+        
     }
     .menu-bar__list{
         flex-direction: row;
@@ -219,35 +231,36 @@ height: min-content;
         transition: background-color .3s;
     }
     .logos__container--social-media{
-        align-self: flex-end;
+        align-items: center;
+        margin:0;
     }
 
     .toggle__input{
         display: none;
     }
 
+
     .social-media__logo:hover{
     transform: scale(1.25);
     }
+    
     .chess-board{
-    box-sizing: content-box;
-    display: flex;
-    flex-wrap: wrap;
-    width: 40vw;
-    height: 40vw;
-    margin: 0em 0 1em 0;
-    border: 1em solid #1b1c20;
+    width: 50vw;
+    height: 50vw;
     }
     .chess-board__cell {
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        height: 12.5%;
-        width: 12.5%;
-        max-height: 100vw;
-        max-width: 100vw;
-        font-size: 4vw;
+    font-size: 5vw;
       }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+
+.chess-board{
+    width: 40vw;
+    height: 40vw;
+    }
+.chess-board__cell {
+    font-size: 4vw;
+    }
+
+}
