--- a/sitio-web/contact-page/stylesheet-contact.css
+++ b/sitio-web/contact-page/stylesheet-contact.css
@@ -5,61 +5,42 @@
 }
 
 @font-face{
-
+    font-family: oswald;
+    src: url('Oswald-Bold.ttf');
+    src: url('Oswald-ExtraLight.ttf');
+    src: url('Oswald-Light.ttf');
+    src: url('Oswald-Medium.ttf');
+    src: url('Oswald-Regular.ttf');
+    src: url('Oswald-SemiBold.ttf');
+    src: url('Oswald-VariableFont_wght.ttf');
 }
 
 .contenedor-padre{
     background: url(img-background-form.jpg) fixed;
+    width: 100%;
+    height: 100%;
     position: relative;
-    width: 1340px;
-    height: 1000px;
+    font-family: Oswald;
     display: inline-block;
     text-align: center;
-    position: absolute;
     top: 10px;
     color: white;
-    text-align: center;
 }
 
 h1{
     font-size: 4em;
+    font-style: bold;
     margin-top: 30px;
     margin-bottom: 7px;
 }
+
 h2{
     font-size: 1em;
     font-style: italic;
     margin-bottom: 40px;
 }
 
-.input-nombre{
-    border-radius: 5%;
-    width: 600px;
-    height: 25px;
-    border: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.input-email{
-    border-radius: 5%;
-    width: 600px;
-    height: 25px;
-    border: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.input-edad{
-    border-radius: 5%;
-    width: 600px;
-    height: 25px;
-    border: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.input-rol{
+.input-nombre, .input-email, .input-edad, .input-rol, .input-fecha{
     border-radius: 5%;
     width: 600px;
     height: 25px;
@@ -86,43 +67,9 @@ h2{
     color: white;
 }
 
-.frontend{
+.frontend, .backend, .media, .juegos, .ux, .other{
     margin-top: 15px;
     margin-bottom: 15px;
-}
-
-.backend{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.media{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.juegos{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.ux{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.other{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.input-fecha{
-    border-radius: 5%;
-    width: 600px;
-    height: 25px;
-    border: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 .input-coment{
@@ -140,12 +87,15 @@ h2{
     height: 25px;
     border-radius: 5%;
     border: 0;
+    margin-bottom: 30px;
 }
 
 
 /* Mediaqueries breakpoints */
 
-@media (min-width: 481px) {}
+@media (min-width: 481px) {
+
+}
 
 @media (min-width: 1025px) {}
 
