--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family:'Oswald-regular';
-    src: url(/sitio-web/home-page/assets/fonts/Oswald-Regular.ttf);
+    src: url(../home-page/assets/fonts/Oswald-Regular.ttf);
 }
 body {
     font-family: 'Oswald-regular';
