--- a/sitio-web/board-page/stylesheet-board.css
+++ b/sitio-web/board-page/stylesheet-board.css
@@ -26,11 +26,18 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.toggle__input{
+.toggle__input--open{
     font-size: 2rem;
-    margin: 0em 0.5em 0em 0em;
+    margin: 0.5em 1em 0em 0em;
     height: min-content;
 }
+.toggle__input--close{
+    display:none;
+    font-size: 1.5rem;
+    margin: 1em 1.5em 0em 0em;
+    height: min-content;
+    }
+
 .checkbox__button{
     display: none;
 }
@@ -57,6 +64,14 @@ body {
     background-color: #ffffff;
     z-index: 100;
 }
+
+.checkbox__button:checked ~ .toggle__input--close{
+    display:block;
+}
+.checkbox__button:checked ~ .toggle__input--open{
+    display:none;
+}
+
 .menu-bar__list {
     display: flex;
     flex-direction: column;
