--- a/sitio-web/home-page/assets/stylesheet.css
+++ b/sitio-web/home-page/assets/stylesheet.css
@@ -284,7 +284,7 @@ padding-bottom: 5%;
 
 }
 .card-front__ocean{
-  background-image: url('./img/mountain.jpeg');
+  background-image: url('./img/ocean.jpg');
   background-size: cover;
   color: #ffffff;
   text-shadow: 4px 4px 7px rgba(0, 1, 0, 0.98);
