--- a/sitio-web/contact-page/stylesheet-contact.css
+++ b/sitio-web/contact-page/stylesheet-contact.css
@@ -5,18 +5,19 @@
 }
 
 @font-face{
-    font-family: oswald;
-    src: url('Oswald-Bold.ttf');
-    src: url('Oswald-ExtraLight.ttf');
-    src: url('Oswald-Light.ttf');
-    src: url('Oswald-Medium.ttf');
-    src: url('Oswald-Regular.ttf');
-    src: url('Oswald-SemiBold.ttf');
-    src: url('Oswald-VariableFont_wght.ttf');
+    font-family: Oswald;
+    src: url('./assets/font/Oswald-Bold.ttf');
+    src: url('./assets/font/Oswald-ExtraLight.ttf');
+    src: url('./assets/font/Oswald-Light.ttf');
+    src: url('./assets/font/Oswald-Medium.ttf');
+    src: url('./assets/font/Oswald-Regular.ttf');
+    src: url('./assets/font/Oswald-SemiBold.ttf');
+    src: url('./assets/font/Oswald-VariableFont_wght.ttf');
 }
 
 .contenedor-padre{
-    background: url(img-background-form.jpg) fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 20%),
+    url(./assets/img/img-background-form.jpg) fixed;
     width: 100%;
     height: 100%;
     position: relative;
@@ -41,9 +42,10 @@ h2{
 }
 
 .input-nombre, .input-email, .input-edad, .input-rol, .input-fecha{
-    border-radius: 5%;
-    width: 600px;
-    height: 25px;
+    padding: 1em;
+    border-radius: 5px;
+    width: 50%;
+    height: 3em;
     border: 0;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -73,7 +75,7 @@ h2{
 }
 
 .input-coment{
-    border-radius: 5%;
+    border-radius: 5px;
     width: 600px;
     height: 100px;
     border: 0;
@@ -85,7 +87,7 @@ h2{
     color: #1b1c20; 
     width: 600px;
     height: 25px;
-    border-radius: 5%;
+    border-radius: 5px;
     border: 0;
     margin-bottom: 30px;
 }
@@ -94,7 +96,9 @@ h2{
 /* Mediaqueries breakpoints */
 
 @media (min-width: 481px) {
+    .contenedor-padre{
 
+    }
 }
 
 @media (min-width: 1025px) {}
