--- a/sitio-web/home-page/assets/stylesheet.css
+++ b/sitio-web/home-page/assets/stylesheet.css
@@ -36,11 +36,17 @@ body {
   justify-content: space-between;
   font-family: 'Oswald-Regular';
 }
-.toggle__input{
+.toggle__input--open{
   font-size: 2rem;
-  margin: 0em 0.5em 0em 0em;
+  margin: 0.5em 1em 0em 0em;
   height: min-content;
 }
+.toggle__input--close{
+  display:none;
+  font-size: 1.5rem;
+  margin: 1em 1.5em 0em 0em;
+  height: min-content;
+  }
 .checkbox__button{
   display: none;
 }
@@ -58,6 +64,9 @@ body {
   z-index: 100;
   background-color: #ffffff;
 }
+.nav__container--desktop{
+  display: none;
+}
 
 .checkbox__button:checked ~ .nav__container{
   height: fit-content;
@@ -66,6 +75,13 @@ body {
   position:absolute;
   background-color: #ffffff;
   z-index: 100;
+}
+
+.checkbox__button:checked ~ .toggle__input--close{
+  display:block;
+}
+.checkbox__button:checked ~ .toggle__input--open{
+  display:none;
 }
 .menu-bar__list {
   display: flex;
@@ -525,23 +541,32 @@ font-family: 'Oswald-regular';
     justify-content: space-between;
     align-items: center;
 }
-.nav__container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: revert;
-    overflow: revert;
-    transition: none;
-    transform: none;
-    width: 100%;
-    z-index: auto;
+.nav.main__container{
+  display: none;
+}
+.nav__container--desktop{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: revert;
+  overflow: revert;
+  transition: none;
+  transform: none;
+  width: 100%;
+  z-index: auto;
 }
 .logos__container--aligner {
     display: flex;
     justify-content: center;
     margin: 1em;
+}
+.checkbox__button:checked ~ .nav__container{
+  display:none;
+}
+.checkbox__button:checked ~ .toggle__input--close{
+  display:none;
 }
 .menu-bar__list{
     flex-direction: row;
@@ -568,8 +593,8 @@ font-family: 'Oswald-regular';
 }
 
 .toggle__input{
-    display: none;
-}
+        display: none;
+    }
 
 
 .social-media__logo:hover{
